# YouTube-video-downloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
src/yt_dld/: __init__.py  __main__.py  main.py
src/yt_dld/core/: deno_manager.py  download_queue.py  downloader.py  ffmpeg_manager.py  format_fetcher.py  i18n.py  playlist_downloader.py  video_downloader.py
src/yt_dld/ui/: download_tab.py  error_dialog.py  format_selector.py  main_window.py  playlist_selector.py  progress_widget.py  settings_dialog.py  video_settings_dialog.py
tests/: test_core.py
