[project]
name = "yt-dld"
version = "0.1.0"
description = "UI wrapper for yt-dlp with bundled ffmpeg"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0",
    "PySide6>=6.7",
]

[project.scripts]
yt-dld = "yt_dld.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
